--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
   <body>
     <div id="message"></div>
     <div class="board"></div>
+    <button type="button" onClick="window.location.reload();"> Reset</button>
   </body>
 </html>
